[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/talo/samples/events/events.gd" type="Script" id=1]

[node name="Events" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 174.0
margin_bottom = 300.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 174.0
margin_bottom = 14.0
text = "User name"

[node name="LineEditUserName" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 174.0
margin_bottom = 42.0
text = "Name"

[node name="Button1" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 174.0
margin_bottom = 66.0
text = "Identify"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 174.0
margin_bottom = 84.0
text = "Player name"

[node name="LineEditPlayerName" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 174.0
margin_bottom = 112.0
text = "Name"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 174.0
margin_bottom = 136.0
text = "Update player name prop"

[node name="LineEdit1" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 174.0
margin_bottom = 164.0
text = "Event Name"

[node name="LineEdit2" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 174.0
margin_bottom = 192.0
text = "Event Prop"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 174.0
margin_bottom = 216.0
text = "Track event"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 174.0
margin_bottom = 234.0
text = "Event stats"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 174.0
margin_bottom = 258.0
text = "Flush events"

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 174.0
margin_bottom = 276.0
text = "Health stats"

[node name="Button5" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 174.0
margin_bottom = 300.0
text = "Ping"
